--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -8,7 +8,7 @@ jobs:
     steps:
       - name: echo a string
         run: echo "Hello Sergio"
-      - name: miltiline script
+      - name: multiline script
         run: |
           node -v
           npm -v
