--- a/.github/workflows/test-delay.yml
+++ b/.github/workflows/test-delay.yml
@@ -21,15 +21,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
-      - name: Setup Minikube
-        id: minikube
-        uses: CodingNagger/minikube-setup-action@v1.0.2
-      - name: Launch Minikube
-        run: eval ${{ steps.minikube.outputs.launcher }}
-      - name: Install Nginx pod
-        run: kubectl apply -f https://k8s.io/examples/application/deployment.yaml
-      - name: Wait for pods
-        uses: CodingNagger/minikube-wait-action@v1.0.1
-      - name: Check pods
+      - name: get deployments
         run: |
-          kubectl get pods
+          kubectl config get-contexts
+      # - name: Setup Minikube
+      #   id: minikube
+      #   uses: CodingNagger/minikube-setup-action@v1.0.2
+      # - name: Launch Minikube
+      #   run: eval ${{ steps.minikube.outputs.launcher }}
+      # - name: Install Nginx pod
+      #   run: kubectl apply -f ../deployment.yml
+      # - name: Wait for pods
+      #   uses: CodingNagger/minikube-wait-action@v1.0.1
+      # - name: Check pods
+      #   run: |
+      #     kubectl get pods
