--- a/.github/workflows/test-delay.yml
+++ b/.github/workflows/test-delay.yml
@@ -3,41 +3,45 @@ name: Shell Commands
 on: [push]
 
 jobs:
-  run-shell-command:
-    runs-on: ubuntu-latest
-    steps:
-      - name: echo a string
-        run: echo "Hello Sergio"
-      - name: multiline script
-        run: |
-          node -v
-          npm -v
-      - name: Sleep for 30 seconds
-        run: sleep 10s
-        shell: bash
-      - name: echo after delay
-        run: echo "Hello After Delay"
+  # run-shell-command:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: echo a string
+  #       run: echo "Hello Sergio"
+  #     - name: multiline script
+  #       run: |
+  #         node -v
+  #         npm -v
+  #     - name: Sleep for 30 seconds
+  #       run: sleep 10s
+  #       shell: bash
+  #     - name: echo after delay
+  #       run: echo "Hello After Delay"
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
-      - name: start minikube
-        id: minikube
+      - uses: actions/checkout@v2
+      - name: Start minikube
         uses: medyagh/setup-minikube@master
-      - name: get deployments
+      - name: Try the cluster !
+        run: kubectl get pods -A
+      - name: Deploy to minikube
+        run: kubectl apply -f ../deploy-to-minikube.yaml
+      - name: Test service URLs
+        run: |
+          minikube service list
+          minikube service example --url
+          echo "------------------opening the service------------------"
+          curl $(minikube service example --url)
+      - name: Test service URLs
+        run: |
+          minikube service list
+          minikube service example --url
+          echo "------------------opening the service------------------"
+          curl $(minikube service example --url)
+            - name: Get deployment
+      - name: Get Deployments
         run: |
           kubectl config get-contexts
           kubectl get deployments
           kubectl get pods
-      # - name: Setup Minikube
-      #   id: minikube
-      #   uses: CodingNagger/minikube-setup-action@v1.0.2
-      # - name: Launch Minikube
-      #   run: eval ${{ steps.minikube.outputs.launcher }}
-      # - name: Install Nginx pod
-      #   run: kubectl apply -f ../deployment.yml
-      # - name: Wait for pods
-      #   uses: CodingNagger/minikube-wait-action@v1.0.1
-      # - name: Check pods
-      #   run: |
-      #     kubectl get pods
