--- a/.github/workflows/test-delay.yml
+++ b/.github/workflows/test-delay.yml
@@ -8,7 +8,7 @@ jobs:
     steps:
       - name: echo a string
         env:
-          COMMIT_VAR: "testor is here"
+          COMMIT_VAR: ${{ github.event.head_commit.message }}
         run: |
           echo "flag=${COMMIT_VAR}"
       # - name: multiline script
