--- a/.github/workflows/test-delay.yml
+++ b/.github/workflows/test-delay.yml
@@ -14,7 +14,7 @@ jobs:
           echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
       - name: echo a string 2
         run: |
-          ${{ steps.pod.outputs }}
+          ${{ steps.pod.outputs.sha_short }}
       # - name: multiline script
       #   run: |
       #     node -v
