--- a/.github/workflows/test-delay.yml
+++ b/.github/workflows/test-delay.yml
@@ -13,8 +13,10 @@ jobs:
         run: |
           echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
       - name: echo a string 2
+        env:
+          TEST: ${{ steps.pod.outputs.sha_short }}
         run: |
-          ${{ steps.pod.outputs.sha_short }}
+          $TEST
       # - name: multiline script
       #   run: |
       #     node -v
