--- a/.github/workflows/test-delay.yml
+++ b/.github/workflows/test-delay.yml
@@ -14,7 +14,7 @@ jobs:
           echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
       - name: echo a string 2
         env:
-          TEST: ${{ steps.pod.outputs.sha_short }}
+          TEST: ${{ steps.pod.outputs }}
         run: |
           echo $TEST
       # - name: multiline script
