--- a/.github/workflows/test-delay.yml
+++ b/.github/workflows/test-delay.yml
@@ -14,9 +14,9 @@ jobs:
           echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
       - name: echo a string 2
         env:
-          TEST: ${{ steps.pod.outputs }}
+          TEST: ${{ steps.pod.outputs.sha_short }}
         run: |
-          echo $TEST
+          echo ${{ steps.pod.outputs.sha_short }}
       # - name: multiline script
       #   run: |
       #     node -v
