--- a/.github/workflows/test-delay.yml
+++ b/.github/workflows/test-delay.yml
@@ -9,7 +9,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: echo a string
         id: pod
-        shell: bash
+        # shell: bash
         run: |
           echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
       - name: echo a string 2
