--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -41,3 +41,9 @@ jobs:
           echo "WF_ENV: ${WF_ENV}"
           echo "JOB_ENV: ${JOB_ENV}"
           echo "STEP_ENV: ${STEP_ENV}"
+  checking-github-shortcuts:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checking shortcuts
+        run: |
+          echo "github.sha: {{github.sha}}"
