--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -46,4 +46,4 @@ jobs:
     steps:
       - name: Checking shortcuts
         run: |
-          echo "github.sha: {{github.sha}}"
+          echo "github.sha: ${{github.sha}}"
